fern/versions/v0.2.0/pages/contribute/index.mdx
---
title: "Contribute to NeMo Gym"
description: ""
---
Welcome! We are excited to have you contribute to NeMo Gym. Whether you are adding new training environments, integrating RL frameworks, improving documentation, or fixing bugs, your contributions help advance RL training.

---

## Ways to Contribute

<Accordion title="Add Environments">
New environments expand Gym's training capabilities.

- Novel training environments (coding, reasoning, tool use, games, and so on)
- Benchmark integrations (such as SWE-Bench and Tau Bench)

→ Refer to contribute-environments for guidance.
</Accordion>

<Accordion title="Integrate RL Frameworks">
Have a preferred training framework? Help integrate it with NeMo Gym.

→ Refer to training-framework-integration for integration guides.
</Accordion>

<Accordion title="Improve Documentation">
- New tutorials and advanced guides
- Code examples and best practices
- API documentation improvements
</Accordion>

<Accordion title="Report Bugs & Fix Issues">
- Found a bug? [Open an issue](https://github.com/NVIDIA-NeMo/Gym/issues/new?template=bug.md) with reproduction steps.
- Want to fix one? Check [open issues](https://github.com/NVIDIA-NeMo/Gym/issues) for bugs to tackle.
</Accordion>

<Accordion title="Features & Enhancements">
Have an idea for a new feature or improvement? [Open an issue](https://github.com/NVIDIA-NeMo/Gym/issues/new?template=feature.md) to start a discussion!
</Accordion>

---

## Before You Start

All contributions require signed commits and DCO sign-off. Refer to development-setup for environment setup, CI/CD requirements, and commit signing instructions.

**Not sure where to start?** Check our [open issues](https://github.com/NVIDIA-NeMo/Gym/issues) or create a new issue to discuss your idea.
