fern/versions/v0.6.0/pages/contribute/index.mdx
---
title: "Overview"
description: ""
position: 1
---
Welcome! We are excited to have you contribute to NeMo Gym. Whether you are adding new training environments, integrating RL frameworks, improving documentation, or fixing bugs, your contributions help advance RL training.

---

## Ways to Contribute

<Accordion title="Add Environments">
New environments expand Gym's training capabilities.

- Novel training environments (coding, reasoning, tool use, games, and so on)
- Benchmark integrations (such as SWE-Bench and Tau Bench)

→ Refer to [contribute-environments](/contribute/environments) for guidance.
</Accordion>

<Accordion title="Integrate RL Frameworks">
Have a preferred training framework? Help integrate it with NeMo Gym.

→ Refer to [training-framework-integration](/contribute/rl-framework-integration) for integration guides.
</Accordion>

<Accordion title="Improve Documentation">
- New tutorials and advanced guides
- Code examples and best practices
- API documentation improvements
</Accordion>

<Accordion title="Use Agent Skills">
NeMo Gym ships vetted agent skills that accelerate common development workflows with AI coding assistants.

→ Refer to [Agent Skills](/contribute/agent-skills) for the available skills and how to use them.
</Accordion>

<Accordion title="Report Bugs & Fix Issues">
- Found a bug? [Open an issue](https://github.com/NVIDIA-NeMo/Gym/issues/new?template=bug.md) with reproduction steps.
- Want to fix one? Check [open issues](https://github.com/NVIDIA-NeMo/Gym/issues) for bugs to tackle.
</Accordion>

<Accordion title="Features & Enhancements">
Have an idea for a new feature or improvement? [Open an issue](https://github.com/NVIDIA-NeMo/Gym/issues/new?template=feature.md) to start a discussion!
</Accordion>

---

## Use of AI and LLM Tools

We encourage contributors to use AI coding assistants (Cursor, Claude, Codex, OpenCode, and similar) where they genuinely help, but AI assistance does not replace human understanding, judgment, and accountability.

**Guiding principle:** Prefer contributions where your review and ownership clearly outweigh the maintainer review burden. You are responsible for every line of code you submit, regardless of whether you or an AI tool wrote it.

Refer to [`AGENTS.md`](https://github.com/NVIDIA-NeMo/Gym/blob/main/AGENTS.md) for the quality bar (shared by humans and coding agents), and to [Use of AI and LLM Tools](/contribute/development-setup#use-of-ai-and-llm-tools) for how maintainers handle low-effort submissions.

---

## Before You Start

All contributions require DCO sign-off (`git commit -s`). Cryptographic commit signing is optional. Refer to [development-setup](/contribute/development-setup) for environment setup, CI/CD requirements, and DCO instructions.

**Not sure where to start?** Check our [open issues](https://github.com/NVIDIA-NeMo/Gym/issues) or create a new issue to discuss your idea.
